external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/chain_lower_case_incomplete.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03009]: unbound variable
  ┌─ tests/move_2024/ide_mode/chain_lower_case_incomplete.move:5:9
  │
5 │         b
  │         ^ Unbound variable 'b'
